refactor(bi-biz):优化报告下载功能和图片插入逻辑
- 简化报告下载功能，直接使用 window.location.href跳转到下载链接
- 优化图片插入逻辑，提高代码复用性和可读性
- 调整表格样式和布局，使图片展示效果更佳